# runbook-exec

./: .gitignore  .runbook-exec.toml  LICENSE  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: validate.yml
.kiro/specs/runbook-exec/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: conventions.md  product.md  structure.md  tech.md
examples/: disk-full.md  disk-windows-cmd.md  disk-windows.md  test-failure.md
runbook_exec/: __init__.py  _json_utils.py  approval.py  audit.py  classifier.py  cli.py  config.py  display.py  exceptions.py  executor.py  interrupt.py  llm.py  mcp_server.py  models.py  parser.py  shell.py
tests/: conftest.py  test_approval.py  test_audit.py  test_classifier.py  test_cli.py  test_config.py  test_display.py  test_executor.py  test_llm.py  test_mcp_server.py  test_models.py  test_parser.py  test_shell.py
