[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "runbook-exec"
version = "0.2.2"
description = "AI-driven CLI tool and MCP server that transforms Markdown runbooks into executable automation with safety gates and audit trails"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["runbook", "automation", "incident-response", "cli", "llm", "mcp", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15,<1",
    "anthropic>=0.49,<1",
    "slack-sdk>=3.35,<4",
    "rich>=13.9,<14",
    "pydantic>=2.13,<3",
    "markdown-it-py>=3.0,<4",
    "mcp>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.25.3",
    "pytest-mock==3.14.0",
    "hypothesis==6.130.5",
    "ruff==0.9.10",
]

[project.scripts]
runbook-exec = "runbook_exec.cli:app"
runbook-exec-mcp = "runbook_exec.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runbook_exec*"]

[tool.setuptools.package-data]
runbook_exec = ["py.typed"]
"*" = ["examples/*.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in default arguments (typer uses this pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["runbook_exec"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "property: property-based tests using Hypothesis",
]
addopts = "-v"
filterwarnings = [
    # pytest-asyncio 0.25.x emits a DeprecationWarning on Python 3.14 about
    # asyncio.get_event_loop_policy. Library issue, will resolve upstream.
    "ignore::DeprecationWarning:pytest_asyncio",
]

[tool.coverage.run]
source = ["runbook_exec"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
